fixed top-nav on mobile view

--- a/src/assets/scss/custom/_navigation.scss
+++ b/src/assets/scss/custom/_navigation.scss
@@ -91,7 +91,7 @@
     max-width: 120px;
     height: auto;
     padding: 5;
-    margin: 0;
+    margin-left: 110px;
 
 }
     
